--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@strapi/plugin-users-permissions": "4.3.4",
     "@strapi/strapi": "4.3.4",
     "better-sqlite3": "7.4.6",
+    "date-fns": "^2.29.3",
+    "koa": "^2.13.4",
     "pg": "^8.7.3",
     "typescript": "^4.8.2"
   },
