--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "better-sqlite3": "7.4.6",
     "date-fns": "^2.29.3",
     "koa": "^2.13.4",
+    "parse-database-url": "^0.3.0",
     "pg": "^8.7.3",
     "typescript": "^4.8.2"
   },
