--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "koa": "^2.13.4",
     "parse-database-url": "^0.3.0",
     "pg": "^8.7.3",
+    "strapi-plugin-vercel-deploy": "^1.3.1",
     "typescript": "^4.8.2"
   },
   "author": {
