--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "devDependencies": {},
   "dependencies": {
+    "@sendgrid/mail": "^7.7.0",
     "@strapi/plugin-i18n": "4.3.4",
     "@strapi/plugin-users-permissions": "4.3.4",
     "@strapi/strapi": "4.3.4",
@@ -21,7 +22,8 @@
     "parse-database-url": "^0.3.0",
     "pg": "^8.7.3",
     "strapi-plugin-vercel-deploy": "^1.3.1",
-    "typescript": "^4.8.2"
+    "typescript": "^4.8.2",
+    "winston": "^3.8.2"
   },
   "author": {
     "name": "A Strapi developer"
